--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="box">
-        <div class="box1" id="myBox">
-            <a  target="_blank" href="Main-website/index.html#">
-                <i class='bx bxl-github hub'></i>
-            </a>
-        </div>
-        <div class="box2" id="myBox1">
-            <i class='bx bxl-github hub'></i>
-          
-        </div>
-        <div class="box3" id="myBox2">
-            <a href="Main-website/index.html#">
-                <i class='bx bxl-github hub'></i>
-            </a>
-            
+    <div class="box-wrapper">
+        <div class="box">
+            <div class="box1">
+                <a href="Main-website/index.html#">
+                    <i class='bx bxl-github hub'></i>
+                </a>
+            </div>
+            <div class="box2">
+                <a href="https://example.com/">
+                    <i class='bx bxl-github hub'></i>
+                </a>
+            </div>
+            <div class="box3">
+                <a href="https://example.com/">
+                    <i class='bx bxl-github hub'></i>
+                </a>
+            </div>
         </div>
     </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
